--- a/app/templates/admin/adminBase.html
+++ b/app/templates/admin/adminBase.html
@@ -12,7 +12,7 @@
 <body>
     <header class="header">
         <div class="toggle-btn" onclick="toggleSidebar()" aria-label="Toggle sidebar">
-            <i class="fas fa-bars"></i> | <span id="current-datetime"></span> 
+            <i class="fas fa-bars"></i> | <span class="user-info" id="current-datetime"></span> 
         </div>
         <div class="user-info">
             {{ user_name }} | {{ user_id }} | Admin of {{ user_department }} 
@@ -156,18 +156,14 @@
     <script>
         function updateDateTime() {
             const now = new Date();
-            const options = { 
-                day: '2-digit', month: 'short', year: 'numeric',
-                hour: '2-digit', minute: '2-digit', second: '2-digit',
-                hour12: false 
-            };
+            const options = { weekday: 'long',day: '2-digit', month: 'short', year: 'numeric',hour: '2-digit', minute: '2-digit', second: '2-digit',hour12: false };
             const formatted = now.toLocaleString('en-GB', options).replace(',', ':');
             document.getElementById("current-datetime").textContent = formatted;
         }
-
         updateDateTime(); // initial run
         setInterval(updateDateTime, 1000); // update every second
     </script>
+
 
     {% block extra_scripts %}{% endblock %}
 </body>
