--- a/app/templates/admin/adminBase.html
+++ b/app/templates/admin/adminBase.html
@@ -12,10 +12,10 @@
 <body>
     <header class="header">
         <div class="toggle-btn" onclick="toggleSidebar()" aria-label="Toggle sidebar">
-            <i class="fas fa-bars"></i> | <span class="user-info" id="current-datetime"></span> 
+            <i class="fas fa-bars"></i>
         </div>
         <div class="user-info">
-            {{ user_name }} | {{ user_id }} | Admin of {{ user_department }} 
+            {{ user_name }} | {{ user_id }} | Admin of {{ user_department }} | <span class="user-info" id="current-datetime"></span> 
         </div>
     </header>
 
