--- a/app/templates/access/accessBase.html
+++ b/app/templates/access/accessBase.html
@@ -14,11 +14,12 @@
         </div>
         <div class="user-info">
             {{ user_name }} | {{ user_id }} | 
-            {% if user_level == 2 %} DEAN
-            {% elif user_level == 3 %} HOS
-            {% elif user_level == 4 %} HOP
-            {% else %} Unknown
-            {% endif %} of {{ user_department }}
+                {% if user_level == 2 %} DEAN
+                {% elif user_level == 3 %} HOS
+                {% elif user_level == 4 %} HOP
+                {% else %} Unknown
+                {% endif %} of {{ user_department }}
+            | <i><span class="user-info" id="current-datetime"></span></i>
         </div>
     </header>
 
@@ -59,5 +60,15 @@
 
     <!-- Javascript control the navigation -->
     <script src="{{ url_for('static', filename='js/function.js') }}"></script>
+    <script>
+        function updateDateTime() {
+            const now = new Date();
+            const options = { weekday: 'long',day: '2-digit', month: 'short', year: 'numeric',hour: '2-digit', minute: '2-digit', second: '2-digit',hour12: false };
+            const formatted = now.toLocaleString('en-GB', options).replace(',', ':');
+            document.getElementById("current-datetime").textContent = formatted;
+        }
+        updateDateTime(); // initial run
+        setInterval(updateDateTime, 1000); // update every second
+    </script>
 </body>
 </html>
