--- a/app/templates/lecturer/lecturerBase.html
+++ b/app/templates/lecturer/lecturerBase.html
@@ -13,7 +13,7 @@
             <i class="fas fa-bars"></i>
         </div>
         <div class="user-info">
-            {{ user_name }} | {{ user_id }} | Lecturer of {{ user_department }}
+            {{ user_name }} | {{ user_id }} | Lecturer of {{ user_department }} | <i><span class="user-info" id="current-datetime"></span></i>
         </div>
     </header>
 
@@ -54,6 +54,16 @@
 
     <!-- Javascript control the navigation -->
     <script src="{{ url_for('static', filename='js/function.js') }}"></script>
+    <script>
+        function updateDateTime() {
+            const now = new Date();
+            const options = { weekday: 'long',day: '2-digit', month: 'short', year: 'numeric',hour: '2-digit', minute: '2-digit', second: '2-digit',hour12: false };
+            const formatted = now.toLocaleString('en-GB', options).replace(',', ':');
+            document.getElementById("current-datetime").textContent = formatted;
+        }
+        updateDateTime(); // initial run
+        setInterval(updateDateTime, 1000); // update every second
+    </script>
 </body>
 </html>
 
